Improve GitHub Actions workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,9 @@ jobs:
 
       - name: Download dependencies
         working-directory: ${{env.SRC_DIR}}
-        run: make deps-test
+        run: |
+          make deps-test
+          make deps
 
       - name: Run tests
         working-directory: ${{env.SRC_DIR}}
