Add Aligo workflow step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,8 @@ on:
     branches: [master]
 
 jobs:
-  Ubuntu:
-    name: Linux
+  Go:
+    name: Go
     runs-on: ubuntu-latest
 
     env:
@@ -70,3 +70,24 @@ jobs:
           CODECLIMATE_API_HOST: https://codebeat.co/webhooks/code_coverage
           CODECLIMATE_REPO_TOKEN: ${{ secrets.CODECLIMATE_TOKEN }}
         run: codeclimate-test-reporter < cover.out
+
+  Aligo:
+    name: Aligo
+    runs-on: ubuntu-latest
+
+    needs: Go
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install Aligo
+        run: |
+          wget https://apps.kaos.st/aligo/latest/linux/x86_64/aligo
+          chmod +x aligo
+
+      - name: Print Aligo version info
+        run: ./aligo --version
+
+      - name: Check Go structs alignment info
+        run: ./aligo check ./...
