--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,9 @@ jobs:
         env:
           CODECLIMATE_API_HOST: https://codebeat.co/webhooks/code_coverage
           CODECLIMATE_REPO_TOKEN: ${{ secrets.CODECLIMATE_TOKEN }}
-        run: codeclimate-test-reporter < cover.out
+        run: |
+          sed -i 's#/v[0-9]\+/#/#g' cover.out
+          codeclimate-test-reporter < cover.out
 
   Aligo:
     name: Aligo
