--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,7 @@ jobs:
           CODECLIMATE_API_HOST: https://codebeat.co/webhooks/code_coverage
           CODECLIMATE_REPO_TOKEN: ${{ secrets.CODECLIMATE_TOKEN }}
         run: |
-          sed -i 's#/v[0-9]\+/#/#g' cover.out
+          sed -i'.original' 's#/v[0-9]\+/#/#g' cover.out
           codeclimate-test-reporter < cover.out
 
   Aligo:
