Improve CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,14 +5,22 @@ on:
     branches: [master, develop]
   pull_request:
     branches: [master]
+  workflow_dispatch:
+    inputs:
+      force_run:
+        description: 'Force workflow run'
+        required: true
+        type: choice
+        options: [yes, no]
 
 permissions:
   actions: read
   contents: read
   statuses: write
 
-env:
-  SRC_DIR: src/github.com/${{ github.repository }}
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   Go:
@@ -21,33 +29,28 @@ jobs:
 
     strategy:
       matrix:
-        go: [ '1.17.x', '1.18.x', '1.19.x', '1.20.x' ]
+        go: [ '1.18.x', '1.19.x', '1.20.x' ]
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go }}
 
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          path: ${{env.SRC_DIR}}
-
       - name: Download dependencies
-        working-directory: ${{env.SRC_DIR}}
         run: make deps
 
       - name: Run tests
-        working-directory: ${{env.SRC_DIR}}
         run: go test -v -covermode count -coverprofile cover.out
 
       - name: Send coverage data
-        uses: essentialkaos/goveralls-action@v1
+        uses: essentialkaos/goveralls-action@v2
         env:
           COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          path: ${{env.SRC_DIR}}
           profile: cover.out
           parallel: true
           flag-name: linux-${{ matrix.go }}
@@ -60,7 +63,7 @@ jobs:
 
     steps:
       - name: Finish parallel tests
-        uses: essentialkaos/goveralls-action@v1
+        uses: essentialkaos/goveralls-action@v2
         env:
           COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -73,18 +76,15 @@ jobs:
     needs: Go
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: '1.19.x'
 
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          path: ${{env.SRC_DIR}}
-
       - name: Check Golang sources with Aligo
         uses: essentialkaos/aligo-action@v2
         with:
-          path: ${{env.SRC_DIR}}
           files: ./...
