--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
     strategy:
       matrix:
-        go: [ '1.23.x', '1.24.x' ]
+        go: [ 'oldstable', 'stable' ]
 
     steps:
       - name: Checkout
@@ -97,10 +97,11 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.23.x'
+          go-version: 'stable'
 
       - name: Check Golang sources with Aligo
         uses: essentialkaos/aligo-action@v2
+        continue-on-error: true
         with:
           files: ./...
 
@@ -115,5 +116,5 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Check spelling
-        continue-on-error: true
         uses: crate-ci/typos@master
+        continue-on-error: true
